9 assignment(Relationship)/objects/Teacher__c.object
<CustomObject>
    <fields>
        <fullName>College__c</fullName>
        <label>College</label>
        <referenceTo>College__c</referenceTo>
        <relationshipLabel>Teachers</relationshipLabel>
        <relationshipName>Teachers</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Email_Address__c</fullName>
        <label>Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Teacher_Phone_Number__c</fullName>
        <label>Teacher Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Teachers_Name__c</fullName>
        <label>Teachers Name</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Teacher</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Teacher Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Teachers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>